Fixed quantity not being updated after edit, item name not showing up in edit box, updated readme

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,9 @@
 body {
   background:rgb(255, 170, 190);
   color:rgb(65, 31, 31);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: "Kanit", sans-serif;
 }
 
